--- a/stylei.css
+++ b/stylei.css
@@ -1,9 +1,12 @@
+body {
+  background-color: black;
+}
+
 .relative {
   position: relative;
   width: 6318.72px;
   height: 4564.8px;
-  border: 3px solid #73AD21;
-  background: url("../core2project1/assets/circlemazeeee.png");
+  background: url("../core2project1/assets/Asset\ 1.png");
   background-repeat: no-repeat;
   background-size: 6318.72px 4564.8px;
   z-index: -9;
@@ -13,7 +16,7 @@
   position: absolute;
   width: 60px;
   height: 60px;
-  background-color: rgb(4, 208, 82);
+  background-color: rgb(237, 89, 3);
   border-radius: 50%;
   display: flex;
   justify-content: center;
@@ -24,43 +27,43 @@
 }
 
 #circle1 {
-  left: 1674.9px;
-  top: 1127.7px;
+  left: 2296.6px;
+  top: 755.35px;
 }
 
 #circle2 {
-  left: 2219.94px;
-  top: 1153.95px;
+  left: 1840.41px;
+  top: 2212.5px;
 }
 
 #circle3 {
-  left: 4371.6px;
-  top: 861.47px;
+  left: 2904.2px;
+  top: 2506.44px;
 }
 
 #circle4 {
-  left: 4044.82px;
-  top: 1632.77px;
+  left: 2450.75px;
+  top: 3959.06px;
 }
 
 #circle5 {
-  left: 4531.27px;
-  top: 2627.49px;
+  left: 3732.61px;
+  top: 872.97px;
 }
 
 #circle6 {
-  left: 3330.06px;
-  top: 4127.47px;
+  left: 3577.63px;
+  top: 1613.44px;
 }
 
 #circle7 {
-  left: 2265.54px;
-  top: 3396.23px;
+  left: 4645.15px;
+  top: 2047.52px;
 }
 
 #circle8 {
-  left: 1721.89px;
-  top: 2990.43px;
+  left: 3890.18px;
+  top: 3938.34px;
 }
 
 .hover-text {
