--- a/page1.css
+++ b/page1.css
@@ -1,4 +1,3 @@
-
 body {
     margin: 0;
     background-color: black;
@@ -11,24 +10,34 @@ body {
     padding: 20px;
 }
 
-
 .content {
     display: flex;
     flex: 1;
-    justify-content: flex-start;
     align-items: center;
+    justify-content: flex-start;
 }
 
 .message {
     font-size: 27px;
     line-height: 1.5;
     text-align: left;
-    margin-left: 50px; 
-    width: 40vw; 
-    opacity: 0; 
-    animation: fadeIn 2s forwards; 
+    width: 40vw;
+    opacity: 0;
+    animation: fadeIn 2s forwards;
 }
 
+.left {
+    margin-left: 50px;
+}
+
+.right {
+    margin-left: 50px;
+    margin-right: 0;
+}
+
+.left + .right {
+    margin-left: 50px;
+}
 
 @keyframes fadeIn {
     0% {
@@ -38,7 +47,6 @@ body {
         opacity: 1;
     }
 }
-
 
 .continue-link {
     position: fixed;
@@ -52,9 +60,44 @@ body {
     transition: background-color 0.3s, color 0.3s;
 }
 
-
 .continue-link:hover {
     background-color: rgb(0, 0, 0);
     color: rgb(237, 89, 3);
     border: 2px solid rgb(237, 89, 3);
+}
+
+
+
+
+@media (max-width: 600px) {
+    body {
+        padding: 20px;
+    }
+    
+    .message {
+        font-size: 20px;
+        width: 80vw;
+    }
+    
+    .content {
+        flex-direction: column;
+        justify-content: center;
+        align-items: flex-start;
+    }
+    
+    .message.left,
+    .message.right {  
+        margin-left: 7vw;
+        width: 80vw;
+    }
+    
+    .message.right {  
+        margin-top: 10px;
+    }
+    
+    .continue-link {
+        font-size: 16px;
+        padding: 8px 15px;
+        right: 20px;
+    }
 }
