--- a/page4.css
+++ b/page4.css
@@ -118,3 +118,15 @@ body {
     display: block; 
   }
   
+  @media (max-width: 600px) {
+
+    #final-objective {
+        font-size: 20px; 
+        margin-left: 30px; 
+        width: 80vw; 
+    }
+    .continue-link {
+        font-size: 16px; 
+        padding: 8px 15px; 
+    }
+}
